xorgxrdp (1:0.2.8-1) UNRELEASED; urgency=medium

  * New upstream version.
  * Bump Standards-Version to 4.2.1.
    + No changes needed.

 -- Dominik George <natureshadow@debian.org>  Wed, 26 Sep 2018 22:57:56 +0200

xorgxrdp (1:0.2.6-1) unstable; urgency=medium

  * Split package from xrdp source.

 -- Dominik George <natureshadow@debian.org>  Sat, 31 Mar 2018 18:44:01 +0200