@@ -8,7 +8,7 @@ Forwarded: https://github.com/neutrinolabs/xorgxrdp/pull/16
  https://github.com/neutrinolabs/xrdp/pull/464
 --- a/module/rdpClientCon.c
 +++ b/module/rdpClientCon.c
-@@ -1219,7 +1219,7 @@ rdpClientConInit(rdpPtr dev)
+@@ -1231,7 +1231,7 @@ rdpClientConInit(rdpPtr dev)
                  return 0;
              }
          }
