@@ -4,7 +4,7 @@ Forwarded: https://github.com/neutrinolabs/xrdp/issues/647
 Reviewed-by: Dominik George <nik@naturalnet.de>
 --- a/configure.ac
 +++ b/configure.ac
-@@ -6,6 +6,8 @@ AC_CONFIG_HEADERS(config_ac.h:config_ac-
+@@ -13,6 +13,8 @@ AC_CONFIG_HEADERS(config_ac.h:config_ac-
  AM_INIT_AUTOMAKE([1.11 foreign parallel-tests])
  m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
  AC_PROG_CC
@@ -13,7 +13,7 @@ Reviewed-by: Dominik George <nik@naturalnet.de>
  AC_C_CONST
  AC_PROG_LIBTOOL
  
-@@ -75,5 +77,6 @@ AC_CONFIG_FILES([Makefile
+@@ -82,5 +84,6 @@ AC_CONFIG_FILES([Makefile
                   xrdpmouse/Makefile
  ])
  
