@@ -3,6 +3,7 @@ xorgxrdp (1:0.2.8-1) UNRELEASED; urgency=medium
   * New upstream version.
   * Bump Standards-Version to 4.2.1.
     + No changes needed.
+  * Refresh patches.
 
  -- Dominik George <natureshadow@debian.org>  Wed, 26 Sep 2018 22:57:56 +0200
 
